@@ -48,9 +48,9 @@ RFC 5464        METADATA
 RFC 5530        IMAP Response Codes
 RFC 5550        Lemonade Profile (specifically [2.8] - $Forwarded flag)
 
-draft-ietf-morg-sortdisplay-02    SORT=DISPLAY
-draft-ietf-morg-inthread-00       THREAD=REFS
-
+draft-ietf-morg-status-in-list-01  LIST-STATUS
+draft-ietf-morg-sortdisplay-02     SORT=DISPLAY
+draft-ietf-morg-inthread-00        THREAD=REFS
 
 
 POP3
